@@ -3,5 +3,5 @@
     <string id="30001">Site Materials Language</string>
     <string id="30002">Rows Per Page Count</string>
     <string id="30003">Lock Folders View Style</string>
-    <string id="30004">Enable Optimization For 'Transperency!' Skin</string>
+    <string id="30004">Enable Optimization For Skin</string>
 </strings>
