@@ -3,5 +3,5 @@
     <string id="30001">Язык материалов сайта</string>
     <string id="30002">Количество объектов на странице</string>
     <string id="30003">Удерживать стиль отображения списков</string>
-    <string id="30004">Оптимизировать под скин 'Transperency!'</string>
+    <string id="30004">Оптимизировать под скин</string>
 </strings>
