@@ -3,5 +3,5 @@
     <string id="30001">Мова матерiалiв сайту</string>
     <string id="30002">Кiлькiсть об'єктiв на сторiнцi</string>
     <string id="30003">Утримувати стиль вiдображення спискiв</string>
-    <string id="30004">Оптимизувати пiд скiн 'Transperency!'</string>
+    <string id="30004">Оптимизувати пiд скiн</string>
 </strings>
