@@ -1,4 +1,7 @@
-﻿[B]Version 1.0.7[/B]
+﻿[B]Version 1.0.8[/B]
+- Implemented skin optimization for "Confluence" by default
+
+[B]Version 1.0.7[/B]
 - Added checksum for proper autoupdates
 
 [B]Version 1.0.6[/B]
